RESOLVED FIXED313349
Fix FileSystemDirectoryHandle's removeEntry()
https://bugs.webkit.org/show_bug.cgi?id=313349
Summary Fix FileSystemDirectoryHandle's removeEntry()
Anne van Kesteren
Reported 2026-04-26 08:12:49 PDT
.
Attachments
Anne van Kesteren
Comment 1 2026-04-26 08:16:49 PDT
EWS
Comment 2 2026-04-28 02:53:59 PDT
Committed 312193@main (ddc0a2f55d92): <https://commits.webkit.org/312193@main> Reviewed commits have been landed. Closing PR #63632 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-28 02:54:12 PDT
Note You need to log in before you can comment on or make changes to this bug.