Fix FileSystemDirectoryHandle's removeEntry() https://bugs.webkit.org/show_bug.cgi?id=313349

Reviewed by Sihui Liu.

WPT identified a couple minor issues. While here we also correct
isValidFileName() to properly reject \ on Windows and update WPT to not
count \ as a path separator on all platforms:

    https://github.com/web-platform-tests/wpt/pull/59480

Canonical link: https://commits.webkit.org/312193@main